--- a/.github/workflows/mdtf_tests.yml
+++ b/.github/workflows/mdtf_tests.yml
@@ -21,10 +21,10 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        conda-root: [/usr/share/miniconda3, /Users/runner/miniconda3]
-        json-file: ["tests/github_actions_test_ubuntu_set1.jsonc","tests/github_actions_test_macos_set1.jsonc"]
-        json-file-set2: ["tests/github_actions_test_ubuntu_set2.jsonc", "tests/github_actions_test_macos_set2.jsonc"]
+        os: [ubuntu-latest]
+        conda-root: [/usr/share/miniconda3]
+        json-file: ["tests/github_actions_test_ubuntu_set1.jsonc"]
+        json-file-set2: ["tests/github_actions_test_ubuntu_set2.jsonc"]
         # if experimental is true, other jobs to run if one fails
         experimental: [false]
         exclude:
